--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.13",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "5.9.8",
+    "@react-navigation/stack": "5.14.9",
+    "expo": "^44.0.6",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-elements": "3.4.2",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
