Type Modal, started Favorites

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.6",
+    "@react-navigation/bottom-tabs": "5.11.15",
     "@react-navigation/native": "5.9.8",
     "@react-navigation/stack": "5.14.9",
     "expo": "^44.0.6",
@@ -20,8 +22,7 @@
     "react-native-elements": "3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "@react-navigation/bottom-tabs": "5.11.15"
+    "react-native-screens": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
