partial recipe form, more redux: recipe slice

--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-native-elements": "3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1"
+    "react-native-screens": "~3.10.1",
+    "redux": "4.1.2",
+    "react-redux": "7.2.6",
+    "@reduxjs/toolkit": "1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
