--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "^13.4.0",
     "react-redux": "7.2.6",
     "redux": "4.1.2"
   },
