--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "5.11.15",
+    "@react-navigation/material-bottom-tabs": "^6.2.11",
     "@react-navigation/native": "5.9.8",
     "@react-navigation/stack": "5.14.9",
     "@reduxjs/toolkit": "1.7.2",
@@ -29,9 +30,11 @@
     "react-native": "0.70.5",
     "react-native-elements": "3.4.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "7.2.6",
     "redux": "4.1.2"
   },
