--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-elements": "3.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.1.4",
