--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "5.11.15",
@@ -28,10 +29,11 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "3.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.2.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
