--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
     "@reduxjs/toolkit": "1.7.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.6",
-    "expo": "^47.0.0",
-    "expo-constants": "~14.0.2",
+    "expo": "^48.0.0",
+    "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "3.4.2",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.2.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "7.2.6",
